# multiThreadGrpc

./: 1  README.md  config.h  config.h.in  configure  configure.scan
autom4te.cache/: output.0  traces.0  traces.1
grpcAdaptor/: Makefile  configure.ac  configure.scan  libtool
grpcAdaptor/adaptor/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/adaptor/source/: GrpcAdp.cpp  GrpcAdpCntrl.cpp  GrpcAdpCntrl.h  GrpcAdpRpcClientThread.cpp  GrpcAdpRpcClientThread.h  GrpcAdpThreads.h
grpcAdaptor/adaptor/test/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/adaptor/test/config/: grpc_config.txt
grpcAdaptor/adaptor/test/src/: test.cpp
grpcAdaptor/autom4te.cache/: output.1  traces.1
grpcAdaptor/common/: config.h.in~
grpcAdaptor/common/Service/: ServiceClientImpl.cpp  ServiceClientImpl.h  ServiceImpl.h  ServiceImplNoAck.cpp  ServiceImplNoAck.h  ServiceProtobuf.h  SvcLog.h
grpcAdaptor/common/objs/: Makefile.am
grpcAdaptor/common/objs/Service/: Makefile.in
grpcAdaptor/common/objs/Service/.deps/: libService_a-ServiceClientImpl.Po  libService_a-ServiceCommonType.Po  libService_la-ServiceClientImpl.Plo  libService_la-ServiceImplNoAck.Plo
grpcAdaptor/common/objs/Service/.libs/: libService.so.0.0.0
grpcAdaptor/config/: config.h  config.in
grpcAdaptor/services/: Makefile  Makefile.am  Makefile.in
grpcAdaptor/services/cucp/: Makefile
grpcAdaptor/services/cucp/objs/: Makefile.am
grpcAdaptor/services/cucp/objs/.deps/: libAppService_a-AppService.Po  libCucpService_a-CucpService.Po  libEbmService_a-EbmService.Po
grpcAdaptor/services/cucp/source/: CucpService.h
grpcAdaptor/services/grpc/: mav_common.proto  structure.proto
grpcAdaptor/services/grpc/include/: common.pb.h  mav_common.pb.cc  mav_common.pb.h  mhdr.grpc.pb.h  srvCp.grpc.pb.h  srvCp.pb.h  srvEbm.grpc.pb.h  structure.grpc.pb.cc  structure.grpc.pb.h  structure.pb.cc  structure.pb.h
grpcAdaptor/services/grpc/objs/: Makefile
grpcAdaptor/services/grpc/objs/.deps/: libcpproto_a-common.pb.Po  libcpproto_a-mav_common.grpc.pb.Po  libcpproto_a-srvCp.grpc.pb.Po  libcpproto_a-srvCp.pb.Po  libcpproto_a-structure.grpc.pb.Po  libgrpcproto_a-common.pb.Po  libgrpcproto_a-mav_common.grpc.pb.Po  libgrpcproto_a-srvEbm.pb.Po  libgrpcproto_a-structure.pb.Po  libmavdataplane_a-mav_common.grpc.pb.Po  libmavdataplane_a-mav_dataplane.pb.Po  libmavdataplane_a-mav_sctp.grpc.pb.Po  libmavdataplane_a-mhdr.grpc.pb.Po  libmavebm_a-mav_common.pb.Po  libmavebm_a-mav_cp_ebm.grpc.pb.Po  libmavebm_a-mhdr.grpc.pb.Po  libmavebm_a-srvCp.grpc.pb.Po  libmavebm_a-srvEbm.grpc.pb.Po  libmavsctp_a-mav_common.pb.Po  libmavsctp_a-mav_sctp.grpc.pb.Po  libmavsctp_a-mhdr.pb.Po
grpcAdaptor/services/grpc/test/: App.cpp  Makefile  Makefile.am  Makefile.in  SctpIwf.cpp  libgpr.so.6  libgrpc++.so.1  libgrpc.so.6
include/: EbmCfmCb.h  GrpcAdp.h
src/: Makefile  Makefile.in  clean.sh  ebmCfmCb.c  testgrpc  testgrpc.c
test/: Makefile  Makefile.in  clean.sh  client  client.cc  common.pb.cc  config.status  configure.ac  ebm-client  ebm-client-test  ebm-client.cc  ebm-clienttest.cc  ebm-server  ebm-server.cc  helloworld.proto  libtool  mav_common.grpc.pb.cc  mav_common.grpc.pb.h  server  server.cc  srvCp.grpc.pb.cc  testgrpcclient.cc  testgrpcserver.cc
test/autom4te.cache/: output.1  output.2  requests  traces.2
test/grpcAdaptor/: Makefile.am  Makefile.in  config.status  configure
test/grpcAdaptor/adaptor/source/: GrpcAdp.cpp  GrpcAdpCntrl.cpp  GrpcAdpCntrl.h  GrpcAdpRpcClientThread.cpp  GrpcAdpRpcClientThread.h  GrpcAdpRpcServerThread.cpp  GrpcAdpRpcServerThread.h  GrpcAdpThreads.cpp
test/grpcAdaptor/autom4te.cache/: output.0  requests  traces.0
test/grpcAdaptor/common/: Makefile  Makefile.am  Makefile.in
test/grpcAdaptor/common/Service/: README  ServiceClientImpl.cpp  ServiceClientImpl.h  ServiceCommonType.cpp  ServiceCommonType.h  ServiceServerImpl.cpp  ServiceServerImpl.h  SvcLog.h
test/grpcAdaptor/common/objs/: Makefile  Makefile.in
test/grpcAdaptor/common/objs/Service/: Makefile  Makefile.am
test/grpcAdaptor/common/objs/Service/.deps/: libServiceNoAck_a-ServiceImplNoAck.Po  libService_a-ServiceClientImpl.Po  libService_a-ServiceServerImpl.Po  libService_la-ServiceCommonType.Plo  libService_la-ServiceServerImpl.Plo
test/grpcAdaptor/common/objs/Service/.libs/: libService.la  libService.lai  libService.so.0
test/grpcAdaptor/services/cucp/: Makefile.am  Makefile.in
test/grpcAdaptor/services/cucp/objs/: Makefile  Makefile.in
test/grpcAdaptor/services/cucp/source/: CucpService.cpp
test/grpcAdaptor/services/grpc/: build.sh  common.proto  mhdr.proto  srvCp.proto  srvEbm.proto
test/grpcAdaptor/services/grpc/include/: mhdr.grpc.pb.cc  mhdr.pb.cc  mhdr.pb.h  srvCp.pb.cc  srvEbm.grpc.pb.cc  srvEbm.pb.cc  srvEbm.pb.h
test/grpcAdaptor/services/grpc/objs/: Makefile.am  Makefile.in
test/grpcAdaptor/services/grpc/objs/.deps/: libcpproto_a-common.grpc.pb.Po  libcpproto_a-mav_common.pb.Po  libcpproto_a-mhdr.grpc.pb.Po  libcpproto_a-mhdr.pb.Po  libcpproto_a-srvEbm.grpc.pb.Po  libcpproto_a-srvEbm.pb.Po  libcpproto_a-structure.pb.Po  libgrpcproto_a-common.grpc.pb.Po  libgrpcproto_a-mav_common.pb.Po  libgrpcproto_a-mhdr.grpc.pb.Po  libgrpcproto_a-mhdr.pb.Po  libgrpcproto_a-srvCp.grpc.pb.Po  libgrpcproto_a-srvCp.pb.Po  libgrpcproto_a-srvEbm.grpc.pb.Po  libgrpcproto_a-structure.grpc.pb.Po  libmavdataplane_a-mav_common.pb.Po  libmavdataplane_a-mav_dataplane.grpc.pb.Po  libmavdataplane_a-mav_sctp.pb.Po  libmavdataplane_a-mhdr.pb.Po  libmavebm_a-common.grpc.pb.Po  libmavebm_a-common.pb.Po  libmavebm_a-mav_common.grpc.pb.Po  libmavebm_a-mav_cp_ebm.pb.Po  libmavebm_a-mhdr.pb.Po  libmavebm_a-srvCp.pb.Po  libmavebm_a-srvEbm.pb.Po  libmavebm_a-structure.grpc.pb.Po  libmavebm_a-structure.pb.Po  libmavsctp_a-mav_common.grpc.pb.Po  libmavsctp_a-mav_sctp.pb.Po  libmavsctp_a-mhdr.grpc.pb.Po
test/grpcAdaptor/services/grpc/test/: GW.cpp
test/include/: EbmCfmCb.h  GrpcAdp.h  GrpcAdpStru.h
test/src/: Makefile.am  ebmCfmCb.c  testgrpc  testgrpc.c
test/src/.deps/: testgrpc.Po
